--- a/captcha_keypad.info.yml
+++ b/captcha_keypad.info.yml
@@ -4,3 +4,4 @@ description: 'Provides a virtual keypad to be used with captcha'
 core: 8.x
 package: 'Spam control'
 type: module
+configure: captcha_keypad.settings_form
