--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,5 @@
 version: 2.0
 jobs:
   build:
-    docker:
-      - image: marcellovani/drupalci:8-fpm-alpine
     steps:
-      - run: pwd && ls
-      - run: sh runtests.sh 8 captcha_keypad 8.x1.x-dev
+      - run: docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
