--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,5 +2,6 @@
 version: 2.0
 jobs:
   build:
-    steps:
-      - run: docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
+    machine: true
+      steps:
+        - run: docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
