--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,5 +4,5 @@ jobs:
   build:
     machine: true
       steps: 
-        run:  |
-          docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
+        - run:  |
+            docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
