--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,5 @@ jobs:
   build:
     machine: true
     steps:
-      - checkout
       - run: |
-          docker run --name drupalci --rm marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 captcha_keypad 1.x-dev"
+          docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} 1.x-dev"
