--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: marcellovani/drupalci:8-fpm-alpine
+    machine: true
     steps:
       - run: |
           docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} 1.x-dev"
