--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
     machine: true
     steps:
       - run: |
-          docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} 1.x-dev"
+          docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} ${CIRCLE_BRANCH} ${CIRCLE_REPOSITORY_URL}"
