--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - run:
           name: Run tests
-          command: docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} ${CIRCLE_BRANCH}-dev ${CIRCLE_REPOSITORY_URL}"
+          command: docker run marcellovani/drupalci:8-fpm-alpine /bin/sh -c "sh runtests.sh 8 ${CIRCLE_PROJECT_REPONAME} ${CIRCLE_BRANCH}-dev https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git"
