--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - run:
           name: Run tests
-          command: docker run -v /tmp/drupalci/results:/results \
-                   --rm marcelovani/drupalci:7-apache \
-                   --project ${CIRCLE_PROJECT_REPONAME} \
-                   --version ${CIRCLE_BRANCH}-dev \
+          command: docker run -v /tmp/drupalci/results:/results
+                   --rm marcelovani/drupalci:7-apache
+                   --project ${CIRCLE_PROJECT_REPONAME}
+                   --version ${CIRCLE_BRANCH}-dev
                    --vcs https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git
       - store_artifacts:
           path: /tmp/drupalci/verbose
